detail absence + validation

--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -33,31 +33,6 @@
         </div>
         <!-- ICI PRESENCES -->
 
-
-
-    <!-- Modal : Détails-->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Détails de la demande</h4>
-                </div>
-                <div class="modal-body">
-                    <ul>
-                        <li>Date de la demande : 15/12/2015</li>
-                        <li>Créateur de la demande : Gabriel</li>
-                        <li>Date effective de l'absence / présence : 20/12/2015</li>
-                        <li>Durée effective : 8h</li>
-                        <li>Type de la demande : congé payé</li>
-                        <li>Description : Pose de congé</li>
-                        <li>Nom du valideur : Kévin</li>
-                        <li>Date de la validation : 16/12/2015</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Modal : ajouter un jour-->
     <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
@@ -167,6 +142,42 @@
             },
             success: function (data) {
                 $('#presences').html(data);
+
+                $(function(){
+                    $('#detail-day').click(function(){
+                        detailDay($(this).attr('data-day'));
+                    });
+                });
+
+                // VALIDATION DE LA DEMANDE
+                $(function() {
+
+                    $('#day-validation').change(function () {
+                        if ($(this).is(":checked")) {
+                            var validation = 1;
+                        } else {
+                            validation = 0;
+                        }
+
+                        var validationPath = "{{ path('validationAjax') }}";
+
+                        ValidationDay();
+
+                        function ValidationDay() {
+                            $.ajax({
+                                type: "POST",
+                                url: validationPath,
+                                data: {
+                                    dayId: $('#detail-day').attr('data-day'),
+                                    validation: validation
+                                },
+                                success: function () {
+                                }
+                            });
+                        }
+                    })
+                });
+                // FIN VALIDATION
             }
         });
     }
@@ -202,6 +213,23 @@
         });
     }
 
+
+    var detailDayAjax = "{{ path('ModalDetailContent') }}";
+
+    function detailDay(dayId){
+        $.ajax({
+            type: "POST",
+            url: detailDayAjax,
+            data: {
+                dayId : dayId
+            },
+            success: function (data) {
+                $('#modal-title').html(data.modalTitle);
+                $('#modal-body').html(data.modalBody);
+                $('#modal').modal('show');
+            }
+        });
+    }
 
 </script>
 
