--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -80,6 +80,19 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
+                <!-- Modal -->
+                <div id="modal" class="modal fade" tabindex="-1" role="dialog">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 id="modal-title" class="modal-title"></h4>
+                            </div>
+                            <div id="modal-body" class="modal-body">
+                            </div>
+                        </div><!-- /.modal-content -->
+                    </div><!-- /.modal-dialog -->
+                </div><!-- /.modal -->
             {% block body %}{% endblock %}
             </div>
             <div class="col-md-2"></div>
