--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -168,3 +168,10 @@ div.info-bulle::before {
 .day, .next, .prev  { text-align: center; cursor: pointer}
 
 .switch {text-align: center}
+
+a { color:
+        @blue-violet;
+    font-weight: bold;
+&:hover {
+color: @blue-bird; transition-duration: @transition}
+}
