--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -7,6 +7,7 @@
 @soft-grey: #cccccc;
 @grey-nav: #f8f8f8;
 @flat-red: #c0392b;
+@blue-violet: #6d879b;
 @padding15: 15px;
 @shadow: 2px 5px 4px #e3e3e3;
 @blue-bird: #7EBDCE;
