--- a/src/BirdOffice/UserBundle/Resources/views/presence/detailJour.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/presence/detailJour.html.twig
@@ -1,3 +1,4 @@
+{{ dump($day) }}
 <ul>
     <li>Date de la demande : {{ day.startDate.date|date('d-m-y') }}</li>
     <li>Créateur de la demande : {{ day.user.firstname }}</li>
