--- a/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
@@ -15,8 +15,8 @@
         <td class="text-center">Absence : {{ day.absenceType.name|default('') }}</td>
         <td class="text-center">{{ day.description|default('') }}</td>
         <td class="text-center">
-            <button type="button" id="detail-day" data-day="{{ day.id }}" class="btn btn-primary right" data-toggle="modal" data-target="#myModal">
-                Détails
+            <button type="button" id="detail-day" data-day="{{ day.id }}" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                En savoir plus
             </button>
         </td>
         <td class="actions text-center">
