--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -10,18 +10,11 @@
                     <div class="left">
                         <select class="form-control month" name="month" id="select" title="Mois">
                             <option value="0">Choix du mois</option>
-                            <option value="01">Janvier 2016</option>
-                            <option value="02">Février 2016</option>
-                            <option value="03">Mars 2016</option>
-                            <option value="04">Avril 2016</option>
-                            <option value="05">Mai 2016</option>
-                            <option value="06">Juin 2016</option>
-                            <option value="07">Juillet 2016</option>
-                            <option value="08">Août 2016</option>
-                            <option value="09">Septembre 2016</option>
-                            <option value="10">Octobre 2016</option>
-                            <option value="11">Novembre 2016</option>
-                            <option value="12">Décembre 2016</option>
+
+                            {% for month in range(1, 12, 1) %}
+                                <option>{{ month }}</option>  
+                            {% endfor %}
+
                         </select>
                     </div>
                     <button type="button" class="btn btn-default margin15 right" data-toggle="modal"  data-target="#myModal2">Ajouter un jour</button>
