--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,17 +54,22 @@
 <body>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
-                {% block navbar %}
-                    <nav class="navbar">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">
-                                {% image '@UserBundle/Resources/public/images/logo.png' %}
-                                     <img src="{{ asset_url }}" alt="Bird Office Logo" />
-                                {% endimage %}
-                            </a>
-                        </div>
-                    </nav>
-                {% endblock %}
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    {% block navbar %}
+                        <nav class="navbar">
+                            <div class="navbar-header">
+                                <a class="navbar-brand" href="#">
+                                    {% image '@UserBundle/Resources/public/images/logo.png' %}
+                                    <img src="{{ asset_url }}" alt="Bird Office Logo" />
+                                    {% endimage %}
+                                </a>
+                            </div>
+                        </nav>
+                    {% endblock %}</div>
+                <div class="col-md-2"></div>
+            </div>
         </div>
     </nav>
     <div class="container-fluid">
