--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -65,7 +65,7 @@ h3.nom-responsable {
 
 .checkbox  {margin-bottom: 0; margin-top: 3px}
 
-h2.nom-collab {color: #3c5166; font-weight: bold; text-align: center}
+h2.nom-collab {color: #3c5166; font-weight: bold; text-align: center; margin-top: 40px}
 
 .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th { background-color: #ffffff }
 
