--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,7 +60,7 @@
                     {% block navbar %}
                         <nav class="navbar">
                             <div class="navbar-header">
-                                <a class="navbar-brand" href="#">
+                                <a class="navbar-brand" href="/">
                                     {% image '@UserBundle/Resources/public/images/logo.png' %}
                                     <img src="{{ asset_url }}" alt="Bird Office Logo" />
                                     {% endimage %}
