--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -83,6 +83,10 @@ h2.nom-collab {color: #3c5166; font-weight: bold; text-align: center; margin-top
 
 .full {width: 100%; background: @blue-bird}
 
+#modal-body li {font-size: 14px; font-weight: 600}
+
+.blue-violet {color: @blue-violet; font-weight: inherit}
+
 .icon-size {
     cursor: pointer;
     font-size: 19px;
@@ -169,9 +173,8 @@ div.info-bulle::before {
 
 .switch {text-align: center}
 
-a { color:
-        @blue-violet;
-    font-weight: bold;
+a { color: @blue-violet; font-weight: bold;
 &:hover {
-color: @blue-bird; transition-duration: @transition}
+    color: @blue-bird; transition-duration: @transition
+    }
 }
