--- a/src/BirdOffice/UserBundle/Resources/views/presence/detailJour.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/presence/detailJour.html.twig
@@ -1,9 +1,9 @@
 <ul>
-    <li>Date de la demande : {{ day.startDate.date|date('d-m-y') }}</li>
-    <li>Créateur de la demande : {{ day.user.firstname }}</li>
-    <li>Date effective de l'absence / présence :  {{ day.startDate.date|date('d-m-y') }}</li>
-    {% if day.hours != 0 %}{<li>Durée effective : {{  day.hours }}</li>{% endif %}
-    <li>Type de la demande : {{ day.absenceType.name }}</li>
-    <li>Description : {{ day.description }}</li>
-    <li>Date de la validation : {{ day.validationDate.date|date('d-m-y') }}</li>
+    <li>Date de la demande : <span class="blue-violet">{{ day.startDate.date|date('d-m-y') }}</span></li>
+    <li>Créateur de la demande : <span class="blue-violet">{{ day.user.firstname }}</span></li>
+    <li>Date effective de l'absence / présence :  <span class="blue-violet">{{ day.startDate.date|date('d-m-y') }}</span></li>
+    {% if day.hours != 0 %}{<li>Durée effective : <span class="blue-violet">{{  day.hours }}</span></li>{% endif %}
+    <li>Type de la demande : <span class="blue-violet">{{ day.absenceType.name }}</span></li>
+    <li>Description : <span class="blue-violet">{{ day.description }}</span></li>
+    <li>Date de la validation : <span class="blue-violet">{{ day.validationDate.date|date('d-m-y') }}</span></li>
 </ul>
