--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -27,6 +27,14 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margi
 
 .text-center { vertical-align: middle !important}
 
+label { font-weight: 400}
+
+td.actions i {
+    margin-right: 5px;
+&:last-child {
+    margin-right:0  }
+}
+
 .modal-header {
     background:@blue-bird; color: @white;
     &.alert {
