Modif visuel sur desktop + emailing

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-md-12 no-marge">
                 <div class="full">
-                    {% image '@UserBundle/Resources/public/images/visuel-web.jpg' %}
+                    {% image '@UserBundle/Resources/public/images/visuel-web.png' %}
                         <img src="{{ asset_url }}" alt="Outil de gestion de planning" class="center block margin15"/>
                     {% endimage %}
                 </div>
