--- a/src/BirdOffice/UserBundle/Resources/views/Default/emailing-refus.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/emailing-refus.html.twig
@@ -23,7 +23,7 @@
                         </tr>
                         <tr>
                             <td valign="top" width="600" height="200" colspan="3" bgcolor="#7EBDCE">
-                                {% image '@UserBundle/Resources/public/img-emailing/visuel-small.jpg' %}
+                                {% image '@UserBundle/Resources/public/img-emailing/visuel-small.png' %}
                                 <img src="{{ asset_url }}" alt="Outil de gestion de planning" />
                                 {% endimage %}
                             </td>
