--- a/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-recap.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-recap.html.twig
@@ -1,3 +1,6 @@
+{{ dump(user) }}
+{{ dump(admin) }}
+{{ dump(day) }}
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:border-left="http://www.w3.org/1999/xhtml" xmlns:border-right="http://www.w3.org/1999/xhtml">
     <head>
