--- a/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-reponse.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-reponse.html.twig
@@ -1,8 +1,10 @@
+{{ dump(user) }}
+{{ dump(day) }}
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:border-left="http://www.w3.org/1999/xhtml" xmlns:border-right="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Demande d'absence refusée</title>
+        <title>Demande d'absence validée</title>
     </head>
     <body bgcolor="#ffffff" topmargin="0" marginheight="0">
         <table width="100%" cellpadding="0" cellspacing="0" border="0">
@@ -13,7 +15,7 @@
                             <td valign="top" width="200"></td>
                             <td valign="middle" align="center" width="600" height="50">
                                 {% image '@UserBundle/Resources/public/img-emailing/logo.png' %}
-                                    <img src="{{ asset_url }}" alt="Logo Bird Office" />
+                                     <img src="{{ asset_url }}" alt="Logo Bird Office" />
                                 {% endimage %}
                             </td>
                             <td valign="top" width="200"></td>
@@ -24,7 +26,7 @@
                         <tr>
                             <td valign="top" width="600" height="200" colspan="3" bgcolor="#7EBDCE">
                                 {% image '@UserBundle/Resources/public/img-emailing/visuel-small.png' %}
-                                <img src="{{ asset_url }}" alt="Outil de gestion de planning" />
+                                    <img src="{{ asset_url }}" alt="Outil de gestion de planning" />
                                 {% endimage %}
                             </td>
                         </tr>
@@ -36,7 +38,11 @@
                         <tr>
                             <td valign="top" width="200"></td>
                             <td valign="top" align="center" width="200">
+                                {% if day.isValidated %}
+                                <font face="Arial" size="1" color="#2ecc71" style="font-size:13px;"><strong><i>Demande validée !</i></strong></font>
+                                {% else %}
                                 <font face="Arial" size="1" color="#e74c3c" style="font-size:13px;"><strong><i>Demande non validée !</i></strong></font>
+                                {% endif %}
                             </td>
                             <td valign="top" width="200"></td>
                         </tr>
