--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,7 +62,7 @@
                             <div class="navbar-header">
                                 <a class="navbar-brand" href="/">
                                     {% image '@UserBundle/Resources/public/images/logo.png' %}
-                                    <img src="{{ asset_url }}" alt="Bird Office Logo" />
+                                    <img src="{{ asset_url }}" alt="Bird Office Logo"  />
                                     {% endimage %}
                                 </a>
                             </div>
@@ -78,7 +78,7 @@
             <div class="col-md-12 no-marge">
                 <div class="full">
                     {% image '@UserBundle/Resources/public/images/visuel-web.png' %}
-                        <img src="{{ asset_url }}" alt="Outil de gestion de planning" class="center block margin15"/>
+                        <img src="{{ asset_url }}" alt="Outil de gestion de planning" class="center block margin15 visuel"/>
                     {% endimage %}
                 </div>
             </div>
