--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -1,21 +1,21 @@
 <table class="table table-striped table-bordered text-center">
         <tr class="head-table">
         {# sorting of properties based on query components #}
-            <th class="text-center">Id</th>
-            <th class="text-center">Username</th>
+            <th class="text-center none-mobile">Id</th>
+            <th class="text-center">Nom</th>
             <th class="text-center">Email</th>
             <th class="text-center" width="100">Actions</th>
         </tr>
         {# table body #}
         {% for user in users %}
             <tr {% if loop.index is odd %}class="color"{% endif %}>
-                <td class="text-center">{{ user.id }}</td>
+                <td class="text-center none-mobile">{{ user.id }}</td>
                 <td class="text-center"><a href="{{ path('partnerDetail', {'id': user.id}) }}">{{ user.firstname }}</a></td>
                 <td class="text-center">{{ user.email }}</td>
                 <td class="actions text-center">
                     <i data-user="{{ user.id }}" class="fa fa-trash-o icon-size trash-user"></i>
                     <i data-user="{{ user.id }}" class="fa fa-edit icon-size edit-user"></i>
-                    <a class="text-default" href="">
+                    <a class="text-default none-mobile" href="">
                         <i class="fa fa-search icon-size bouton">
                             <div class="info-bulle">
                                 <p class="center"><strong>Récapitulatif sur Décembre : </strong></p>
