--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -9,7 +9,7 @@
 @flat-red: #c0392b;
 @blue-violet: #6d879b;
 @padding15: 15px;
-@shadow: 2px 5px 4px #e3e3e3;
+@shadow: -2px 7px 13px -3px #ccc;
 @blue-bird: #7EBDCE;
 @pink-flat: #f28073;
 /* Transitions */
