--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -7,15 +7,17 @@ body { font-size: 13px}
     visibility: visible;
     &:hover { text-decoration:none }
 }
-h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margin }
+h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top:30px }
 
 .space { margin-top: @margin!important }
 
-.form-signin { padding: @padding15 }
+.wrap-login { margin-top: 10%}
+
+.form-signin { padding:0 15px 15px }
 
 .block { display: block}
 
-.wrapper { padding: @padding15; box-shadow: @shadow; background: @grey-nav }
+.wrapper { padding: @padding15; background: @white; box-shadow: @shadow; max-width: 410px; margin: 0 auto}
 
 .page-header { margin: 0 auto}
 
@@ -186,3 +188,4 @@ a { color: @blue-violet; font-weight: bold;
     color: @blue-bird; transition-duration: @transition
     }
 }
+.main-title { background: @blue-bird; border-radius: 5px 5px 0 0; color: @white; font-weight: bold; max-width: 410px; padding: 15px}
