--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -14,29 +14,30 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <div class="wrapper">
-                <h1 class="center headline">Gestion interne du personnel</h1>
-                <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin margin">
-                    <h2 class="form-signin-heading center margin15">Connectez-vous</h2>
-                      <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-                    <div>
-                        <label for="username"></label>
-                        <input type="text" id="username" name="_username" placeholder="Login" value="{{ last_username }}" class="form-control" required="required" />
-                    </div>
-                    <div>
-                        <label for="password"></label>
-                        <input type="password" id="password" placeholder="Mot de passe" name="_password" class="form-control" required="required" />
-                    </div>
-                    <div class="space">
-                        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                        <label for="remember_me">Mémoriser mes identifiants</label>
-                    </div>
-                    <input type="submit" id="_submit" name="_submit" value="Connexion" class="btn btn-lg btn-primary btn-block" />
-                     <h2 class="form-signin-heading center margin">Vous n'êtes pas inscrit ?</h2>
-                     <a href="{{ path('fos_user_registration_register') }}" class="hover">
-                         <input type="submit" id="_submit" name="_submit" value="M'inscrire" class="btn btn-primary center space block" />
-                     </a>
-                </form>
+            <div class="wrap-login">
+            <h1 class="center main-title">Gestion interne du personnel</h1>
+                <div class="wrapper">
+                    <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin margin">
+                          <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                        <div>
+                            <label for="username"></label>
+                            <input type="text" id="username" name="_username" placeholder="Login" value="{{ last_username }}" class="form-control" required="required" />
+                        </div>
+                        <div>
+                            <label for="password"></label>
+                            <input type="password" id="password" placeholder="Mot de passe" name="_password" class="form-control" required="required" />
+                        </div>
+                        <div class="space">
+                            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                            <label for="remember_me">Mémoriser mes identifiants</label>
+                        </div>
+                        <input type="submit" id="_submit" name="_submit" value="Connexion" class="btn btn-lg btn-primary btn-block space" />
+                         <h2 class="form-signin-heading center margin">Vous n'êtes pas inscrit ?</h2>
+                         <a href="{{ path('fos_user_registration_register') }}" class="hover">
+                             <input type="submit" id="_submit" name="_submit" value="M'inscrire" class="btn btn-primary center space block" />
+                         </a>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="col-md-3"></div>
