--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -12,8 +12,12 @@
         <div class="col-md-12 space40"></div>
     </div>
     <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
+        <div class="col-md-4">
+            {% image '@UserBundle/Resources/public/images/icon-calendar.png' %}
+            <img src="{{ asset_url }}" alt="Outil de gestion de planning" class="picto-calendar right"/>
+            {% endimage %}
+        </div>
+        <div class="col-md-4">
             <div class="wrap-login">
             <h1 class="center main-title">Gestion interne du personnel</h1>
                 <div class="wrapper">
@@ -40,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-md-4"></div>
     </div>
 </div>
 {% endblock fos_user_content %}
