--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -31,6 +31,8 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top:30px }
 
 label { font-weight: 400}
 
+.picto-calendar { margin-top: 170px; width: 33%}
+
 td.actions i {
     margin-right: 5px;
 &:last-child {
