--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -13,7 +13,7 @@
         {{ form_row(form.managedBy) }}
 
         <div>
-            <input id="add-partner" type="submit" class="btn btn-primary right" value="Valider" data-toggle="modal" data-target="#myModal3"/>
+            <input id="add-partner-ajax" type="submit" class="btn btn-primary right" value="Valider"/>
             <div class="clear"></div>
         </div>
     </form>
