--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -8,7 +8,7 @@
                     <h2 class="nom-collab" id="username" data-user="{{ user.id }}" >{{ user.firstname }}</h2>
                     <div class="space40"></div>
                     <div class="left">
-                        <select class="form-control month" name="month" id="select" title="Mois">
+                        <select class="form-control month" name="month" id="select-month" title="Mois">
                             <option value="0">Choix du mois</option>
                             <option value="01">Janvier 2016</option>
                             <option value="02">Février 2016</option>
@@ -24,7 +24,7 @@
                             <option value="12">Décembre 2016</option>
                         </select>
                     </div>
-                    <button type="button" class="btn btn-default margin15 right" data-toggle="modal"  data-target="#myModal2">Ajouter un jour</button>
+                    <button type="button" class="btn btn-default margin15 right" id="show-day-modal">Ajouter un jour</button>
                 </div>
             </div>
         </div>
@@ -105,5 +105,29 @@
             </div>
         </div>
     </div>
+<script>
+    $('#show-day-modal').click(function () {
+        show_day_modal();
+    });
+
+    $( document ).ready(function() {    // Affiche la liste des collaborateurs pour la HP super_admin
+
+        //Affiche la liste des absences/présences
+        $(function () {
+            var month = $("#select-month").val();
+            var user = $('#username').attr('data-user');
+
+            $('.month').change(function () {
+                var month = $("#select-month").val();
+                ajaxMonthCall(user, month);
+            });
+            ajaxMonthCall(user, month);
+
+        });
+
+
+    });
+
+</script>
 
 {% endblock %}
