--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -1,8 +1,20 @@
+{% block fos_user_content %}
+
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('edit_user', {'user':user.id}) }) }}
-    {{ form_widget(form) }}
+<form {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit">
+
+    {{ form_row(form.civility) }}
+    {{ form_row(form.lastname) }}
+    {{ form_row(form.firstname) }}
+    {{ form_row(form.email) }}
+    {{ form_row(form.plainPassword) }}
+    {{ form_row(form.manager) }}
+    {{ form_row(form._token) }}
+
     <div>
-        <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+        <input id="edit-partner-ajax" type="submit" class="btn btn-primary right" value="Valider"/>
+        <div class="clear"></div>
     </div>
-{{ form_end(form) }}
+</form>
+{% endblock fos_user_content %}
