--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,6 +21,7 @@
     {% block stylesheets %}
         <link href="{{ asset('bundles/user/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css">
         <link href="{{ asset('bundles/user/css/styles.css') }}" rel="stylesheet" type="text/css">
+        <link href="{{ asset('bundles/user/css/switch.css') }}" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     {% endblock %}
 
@@ -37,6 +38,7 @@
         <script src="{{ asset('bundles/user/js/notify.min.js') }}"></script>
         <script src="{{ asset('bundles/user/js/main.js') }}"></script>
         <script src="{{ asset('bundles/user/js/bootstrap-datepicker.js') }}"></script>
+        <script src="{{ asset('bundles/user/js/switch.js') }}"></script>
     {% endblock %}
 
     {% javascripts output='js/app.js'
@@ -45,6 +47,7 @@
         'bundles/user/js/notify.min.js'
         'bundles/user/js/main.js'
         'bundles/user/js/bootstrap-datepicker.js'
+        'bundles/user/js/switch.js'
     %}
 
     <script src="{{ asset_url }}"></script>
