--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -31,7 +31,7 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top:30px }
 
 label { font-weight: 400}
 
-.picto-calendar { margin-top: 170px; width: 33%}
+.picto-calendar { display: block; margin: 0 auto; width: 25%}
 
 td.actions i {
     margin-right: 5px;
